--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -22,3 +22,16 @@
 
     --color-secondary: #f97316;
 }
+
+@utility vertical-text {
+    writing-mode: vertical-lr;
+}
+
+@keyframes scroll-line {
+    0% {
+        transform: translateY(-100%);
+    }
+    100% {
+        transform: translateY(200%);
+    }
+}
